fix: use fixed pseudo-element for full-screen background on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,31 @@
 @import url('https://fonts.googleapis.com/css?family=Lobster');
 @import url('https://fonts.googleapis.com/css?family=Indie+Flower');
-html {
-  min-height: 100%;
-  background: #E5E5E5 url("bg.jpg") center center / cover no-repeat;
-}
-
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
 }
 
+html, body {
+  margin: 0;
+  padding: 0;
+  min-height: 100%;
+  width: 100%;
+}
+
 body {
   background: transparent;
   min-height: 100vh;
+}
+
+body::before {
+  content: '';
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
   height: 100%;
+  background: #E5E5E5 url('bg.jpg') center center / cover no-repeat;
+  z-index: -1;
 }
 
 #card-front {
